# rdmysql3

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
examples/: app.py  settings.py
src/rdmysql/: __init__.py  daily.py  database.py  utils.py
src/rdmysql3/: __init__.py  daily.py  database.py  table.py  utils.py
tests/: fixure.py  settings.py  test_crud.py  test_daily.py  test_field.py
